2004-05-06 21:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: [GormDocument selectClass:] do not switch if
	the class is one of GormSound or GormImage.   This prevents a harmless,
	but annoying message.

2004-05-05 22:18 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: [Gorm unhide:] improvement over previous fix to bring
	all things to front.   The code now toggles the active status of
	the document to cause all of the windows of the document to come
	to the front when the icon is clicked.
	
2004-05-02 18:35 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormImageEditor.m: Added code to allow it to resize the cells
	in the matrix according to the setting in preferences.
	* GormSoundEditor.m: Added code to allow it to resize the cells
	in the matrix according to the setting in preferences.
	* GormSoundView.m: Commented out some of the sound drawing code.
	I'm planning on getting this working later.
	* GormSoundInspector.gorm: Added images in buttons, rw.tiff, 
	rec.tiff, play.tiff, pause.tiff, and ff.tiff.
	
2004-05-02 23:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: [GormDocument openEditorForObject:]
	Do not bring the editor to the front if it's for an NSMenu.
	This prevents the "flash" bug which was apparent after the most
	recent fix for menu editing in Gorm.
	* GormNSMenu.m: Added #ifdef in GormNSMenu to conditionally compile
	[GormNSMenu display] so that it becomes easier to debug issues
	with NSMenu editing.
	
2004-05-01 17:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* Documentation/Gorm.texi: Correction of itemize bullet, error
	found by Christopher Culver.
	
2004-05-01 11:46 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormSoundView.[hm]: New class to visualize the sound being
	inspected.
	* GormSoundInspector.m: Modifications so that it can now use
	a GormSoundView.
	* GormSoundInspector.gorm: Added soundView to .gorm file
	and made appropriate connections.
	